--- a/index.html
+++ b/index.html
@@ -1,3 +1,114 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clyde & Conrad Honey Co.</title>
+    <meta name="description" content="Organic, local, raw honey from Adderbury. Sustainably harvested, unprocessed, and naturally fresh.">
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+    <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: 'Montserrat', sans-serif; background-color: #fff8f0; color: #333; }
+        html { scroll-behavior: smooth; }
+        a { text-decoration: none; color: inherit; }
+
+        /* ---------- HEADER ---------- */
+        header {
+            background-color: #f6d365;
+            padding: 1.5rem 2rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+        }
+        header h1 { font-family: 'Playfair Display', serif; font-size: 2rem; color: #6b3e00; }
+        nav a.nav-button {
+            padding: 0.5rem 1.2rem;
+            margin-left: 0.8rem;
+            border: 2px solid #6b3e00;
+            border-radius: 8px;
+            font-weight: 600;
+            color: #6b3e00;
+            transition: 0.3s ease;
+        }
+        nav a.nav-button:hover { background-color: #6b3e00; color: #fff; transform: translateY(-2px); }
+
+        /* ---------- HERO ---------- */
+        .hero {
+            min-height: 75vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 0 2rem;
+            background-image:
+                linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+                url("https://images.unsplash.com/photo-1587049352847-9c6b2b3b0c99?auto=format&fit=crop&w=1920&q=80");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .hero h2 { font-size: 3.5rem; color: #fff; margin-bottom: 1rem; text-shadow: 2px 2px 6px rgba(0,0,0,0.7); }
+        .hero p { font-size: 1.5rem; color: #fff; max-width: 800px; margin: 0 auto; text-shadow: 2px 2px 6px rgba(0,0,0,0.7); }
+
+        /* ---------- SECTIONS ---------- */
+        section { padding: 5rem 2rem; text-align: center; }
+        section h2 { font-family: 'Playfair Display', serif; font-size: 2.2rem; margin-bottom: 1.5rem; color: #6b3e00; }
+        section p { max-width: 750px; margin: 0 auto 1.5rem; font-size: 1.1rem; color: #555; }
+
+        .about { background-color: #fff2e0; }
+        .about img,
+        .why-natural img { margin-top: 2rem; max-width: 80%; height: 400px; object-fit: cover; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+
+        /* ---------- PRODUCTS ---------- */
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2.5rem;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+        .product-card {
+            background: #fff;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+            transition: 0.3s ease;
+        }
+        .product-card:hover { transform: translateY(-7px); }
+        .product-card img { width: 100%; height: 250px; object-fit: cover; }
+        .product-info { padding: 1.5rem; }
+        .product-card h3 { font-family: 'Playfair Display', serif; color: #6b3e00; margin-bottom: 0.5rem; }
+        .product-info p { margin-bottom: 1rem; }
+        .price { font-weight: bold; font-size: 1.3rem; color: #6b3e00; }
+
+        /* ---------- FOOTER ---------- */
+        footer { background-color: #6b3e00; color: #fff; text-align: center; padding: 2rem; }
+
+        @media (max-width: 600px) {
+            .hero h2 { font-size: 2.4rem; }
+            header { flex-direction: column; gap: 1rem; }
+        }
+    </style>
+
+</head>
+<body>
+
+<header>
+    <h1>Clyde & Conrad Honey Co.</h1>
+    <nav>
+        <a href="#about" class="nav-button">About</a>
+        <a href="#why-natural" class="nav-button">Why Natural</a>
+        <a href="#products" class="nav-button">Honey</a>
+        <a href="#contact" class="nav-button">Contact</a>
+    </nav>
+</header>
+
 <section class="hero">
     <div>
         <h2>Pure Organic Honey, Just as Nature Intended</h2>
@@ -6,9 +117,6 @@
             unprocessed, preservative-free, and naturally fresh.
         </p>
     </div>
-    <img src="https://images.unsplash.com/photo-1590080878160-3c7fbc6b283c?auto=format&fit=crop&w=1920&q=80" 
-         alt="Jar of golden honey" 
-         style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-1;">
 </section>
 
 <section class="about" id="about">
@@ -26,8 +134,7 @@
         Each jar is bottled fresh and left unfiltered and unheated to preserve its natural flavour,
         aroma, and texture — honey exactly as the bees created it.
     </p>
-    <img src="https://images.unsplash.com/photo-1560798078-dc8fc3fc0a77?auto=format&fit=crop&w=1200&q=80" 
-         alt="Golden organic honey dripping from honeycomb">
+    <img src="https://images.unsplash.com/photo-1484661733453-051029819907?auto=format&fit=crop&w=1200&q=80" alt="Golden organic honey dripping from honeycomb">
 </section>
 
 <section class="why-natural" id="why-natural">
@@ -41,6 +148,46 @@
         Our honey is raw and unprocessed — straight from the hive to your table, rich in
         flavor and wholesome goodness.
     </p>
-    <img src="https://images.unsplash.com/photo-1583337130417-2184e7b8c1f8?auto=format&fit=crop&w=1200&q=80" 
-         alt="Beehives in a field">
+    <img src="https://images.unsplash.com/photo-1600124187768-8d7b72f6c4b5?auto=format&fit=crop&w=1200&q=80" alt="Beehives in a field">
 </section>
+
+<section class="products" id="products">
+    <h2>Our Honey Collection</h2>
+    <div class="product-grid">
+
+        <div class="product-card">
+            <img src="https://images.unsplash.com/photo-1569183207365-90a2e0262954?auto=format&fit=crop&w=800&q=80" alt="Crystalised Clover Honey">
+            <div class="product-info">
+                <h3>Crystalised Clover Honey</h3>
+                <p>
+                    Our Crystalised Clover Honey is smooth, golden, and naturally sweet.
+                    Harvested from local clover fields, it has a delicate floral aroma and
+                    velvety texture that makes it perfect for toast, tea, or baking.
+                </p>
+                <span class="price">£5.00 (Standard Jar)</span>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <img src="https://images.unsplash.com/photo-1558642452-9d2a7deb7f62?auto=format&fit=crop&w=800&q=80" alt="Soft Wildflower Honey">
+            <div class="product-info">
+                <h3>Soft Wildflower Honey</h3>
+                <p>
+                    Our Soft Wildflower Honey comes in a larger jar for generous use.
+                    Rich and aromatic, it combines the nectar of multiple local blossoms,
+                    delivering complex flavors and a natural sweetness ideal for drizzling,
+                    cooking, or sharing with family.
+                </p>
+                <span class="price">£10.00 (Larger Jar)</span>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<footer id="contact">
+    <p>Made in Adderbury | Fresh from the hive | © 2025 Clyde & Conrad Honey Co.</p>
+</footer>
+
+</body>
+</html>
