--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
             align-items: center;
             text-align: center;
             padding: 0 2rem;
-            /* Using the dripping honey/honeycomb background image */
             background-image: 
                 linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
                 url("https://images.unsplash.com/photo-1558642452-9d2a7deb7f62?auto=format&fit=crop&q=80&w=1920");
@@ -58,7 +57,7 @@
             font-size: 3.5rem; 
             color: #fff; 
             margin-bottom: 1rem; 
-            text-shadow: 3px 3px 10px rgba(0,0,0,0.8); /* Enhanced shadow for readability */
+            text-shadow: 3px 3px 10px rgba(0,0,0,0.8);
         }
         .hero p { 
             font-size: 1.5rem; 
@@ -141,7 +140,7 @@
     <p>
         Clyde & Conrad Honey Co. is rooted in the belief that exceptional honey begins with
         healthy bees and respect for the land. Our hives are located in the countryside
-        surrounding Adderbury, where bees forage freely among wildflowers, clover, and native plants.
+        surrounding Adderbury, where bees forage freely among wildflowers.
     </p>
     <img src="https://images.unsplash.com/photo-1464861072634-190137f8b05b?auto=format&fit=crop&w=1200" alt="Beekeeper checking hives">
 </section>
@@ -160,7 +159,7 @@
     <div class="product-grid">
 
         <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1585435421671-0c16764628ce?auto=format&fit=crop&w=800" alt="Crystalised Clover Honey">
+            <img src="https://images.unsplash.com/photo-1555035386-35366c89122c?auto=format&fit=crop&w=800" alt="Light colored Crystalised Clover Honey">
             <div class="product-info">
                 <h3>Crystalised Clover Honey</h3>
                 <p>Smooth, golden, and naturally sweet. Perfect for toast or tea.</p>
@@ -169,20 +168,4 @@
         </div>
 
         <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1471943311424-646960669fbc?auto=format&fit=crop&w=800" alt="Soft Wildflower Honey">
-            <div class="product-info">
-                <h3>Soft Wildflower Honey</h3>
-                <p>Rich and aromatic, delivering complex flavors from local blossoms.</p>
-                <span class="price">£10.00 (Larger Jar)</span>
-            </div>
-        </div>
-
-    </div>
-</section>
-
-<footer id="contact">
-    <p>Made in Adderbury | Fresh from the hive | © 2025 Clyde & Conrad Honey Co.</p>
-</footer>
-
-</body>
-</html>
+            <img src="
