--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
             align-items: center;
             text-align: center;
             padding: 0 2rem;
-            background-image: 
-                linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-                url("https://images.pexels.com/photos/1125272/pexels-photo-1125272.jpeg?auto=compress&cs=tinysrgb&w=1920");
+            /* Restored original Hero Background photo */
+            background-image:
+                linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+                url("https://images.unsplash.com/photo-1587049352847-9c6b2b3b0c99?auto=format&fit=crop&w=1920&q=80");
             background-size: cover;
             background-position: center;
-            background-attachment: fixed;
+            background-repeat: no-repeat;
         }
         .hero-content { max-width: 900px; }
         .hero h2 { 
