--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
             align-items: center;
             text-align: center;
             padding: 0 2rem;
-            /* Restored original Hero Background photo */
-            background-image:
-                linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-                url("https://images.unsplash.com/photo-1587049352847-9c6b2b3b0c99?auto=format&fit=crop&w=1920&q=80");
+            background-color: #6b3e00; /* Fallback color */
+            /* High-reliability honey background */
+            background-image: 
+                linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
+                url("https://images.pexels.com/photos/1125272/pexels-photo-1125272.jpeg?auto=compress&cs=tinysrgb&w=1920");
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
         .hero-content { max-width: 900px; }
         .hero h2 { 
@@ -63,14 +64,14 @@
             font-size: 4rem; 
             color: #fff; 
             margin-bottom: 1.5rem; 
-            text-shadow: 2px 4px 10px rgba(0,0,0,0.5);
+            text-shadow: 2px 4px 10px rgba(0,0,0,0.6);
             line-height: 1.1;
         }
         .hero p { 
             font-size: 1.4rem; 
             color: #fdfdfd; 
             margin: 0 auto; 
-            text-shadow: 1px 2px 5px rgba(0,0,0,0.5);
+            text-shadow: 1px 2px 5px rgba(0,0,0,0.6);
             font-weight: 400;
         }
 
@@ -176,7 +177,7 @@
             <div class="product-info">
                 <h3>Crystalised Clover Honey</h3>
                 <p>
-                    A beautiful, pale honey harvested during the peak of the spring bloom. This variety is known for its delicate, creamy texture and a subtle hints of vanilla and sweet grass. Because it is raw, it develops a fine, spreadable crystal structure that makes it the ultimate companion for hot buttered toast or morning porridge.
+                    A beautiful, pale honey harvested during the peak of the spring bloom. This variety is known for its delicate, creamy texture and subtle hints of vanilla and sweet grass. Because it is raw, it develops a fine, spreadable crystal structure that makes it the ultimate companion for hot buttered toast.
                 </p>
                 <span class="price">£5.00 (Standard Jar)</span>
             </div>
@@ -187,7 +188,7 @@
             <div class="product-info">
                 <h3>Soft Wildflower Honey</h3>
                 <p>
-                    A complex, multi-floral blend that captures the diversity of the summer landscape. With a rich amber hue and a bold, aromatic profile, this honey offers deep notes of bramble and woodland blossoms. It remains soft and pourable for longer, making it an excellent choice for drizzling over goat's cheese, yogurt, or fresh fruit.
+                    A complex, multi-floral blend that captures the diversity of the summer landscape. With a rich amber hue and a bold, aromatic profile, this honey offers deep notes of bramble and woodland blossoms. It remains soft and pourable for longer, making it an excellent choice for drizzling.
                 </p>
                 <span class="price">£10.00 (Larger Jar)</span>
             </div>
