--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
             align-items: center;
             text-align: center;
             padding: 0 2rem;
-            background-color: #6b3e00; /* Fallback color */
-            /* High-reliability honey background */
+            /* IMAGE MATCHING YOUR PREVIEW: Honeycombs with dripping honey */
             background-image: 
-                linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-                url("https://images.pexels.com/photos/1125272/pexels-photo-1125272.jpeg?auto=compress&cs=tinysrgb&w=1920");
+                linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
+                url("https://images.unsplash.com/photo-1558642452-9d2a7deb7f62?auto=format&fit=crop&q=80&w=1920");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -115,7 +114,6 @@
             .hero h2 { font-size: 2.8rem; }
             header { flex-direction: column; padding: 1.5rem; }
             nav { margin-top: 1rem; }
-            nav a.nav-button { margin: 0.2rem; display: inline-block; }
         }
     </style>
 </head>
@@ -149,21 +147,15 @@
     <p>
         Unlike commercial honey producers, we embrace a "slow honey" movement. We follow the rhythm of the seasons, allowing our bees to forage naturally on the local nectar of hawthorn, chestnut, and summer wildflowers. This connection to the land results in a harvest that changes subtly in flavor and color with every passing year—a true vintage of the Adderbury countryside.
     </p>
-    <p>
-        Our philosophy is simple: interfere as little as possible. We take only the surplus honey that the bees don't need for winter, ensuring the colony remains strong and resilient. Every jar you hold is a reflection of our commitment to sustainable, ethical beekeeping.
-    </p>
 </section>
 
 <section class="why-natural" id="why-natural">
     <h2>The Power of Raw Honey</h2>
     <p>
-        Most supermarket honey is ultra-filtered and pasteurized at high temperatures to maintain a consistent liquid state. This process kills the live enzymes, destroys the delicate aromatic compounds, and removes the beneficial local pollen that makes honey a true superfood.
+        Most supermarket honey is ultra-filtered and pasteurized at high temperatures. This process kills the live enzymes, destroys the delicate aromatic compounds, and removes the beneficial local pollen that makes honey a true superfood.
     </p>
     <p>
         At Clyde & Conrad, we believe that nature got the recipe right the first time. Our honey is <strong>raw</strong>—meaning it has never been heated above the natural temperature of the beehive. This preserves the incredible complexity of its flavor profile and keeps its health-boosting properties intact. 
-    </p>
-    <p>
-        When you taste our honey, you aren't just tasting sweetness; you are tasting the minerals, antioxidants, and floral notes of the Adderbury terroir. It is honey in its most honest, potent, and delicious form.
     </p>
 </section>
 
@@ -173,22 +165,22 @@
     
     <div class="product-grid">
         <div class="product-card">
-            <img src="https://images.pexels.com/photos/357621/pexels-photo-357621.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Crystalised Clover Honey Jar">
+            <img src="https://images.unsplash.com/photo-1555035386-35366c89122c?auto=format&fit=crop&q=80&w=800" alt="Crystalised Clover Honey Jar">
             <div class="product-info">
                 <h3>Crystalised Clover Honey</h3>
                 <p>
-                    A beautiful, pale honey harvested during the peak of the spring bloom. This variety is known for its delicate, creamy texture and subtle hints of vanilla and sweet grass. Because it is raw, it develops a fine, spreadable crystal structure that makes it the ultimate companion for hot buttered toast.
+                    A beautiful, pale honey harvested during the peak of the spring bloom. This variety is known for its delicate, creamy texture and subtle hints of vanilla. Because it is raw, it develops a fine, spreadable crystal structure perfect for toast.
                 </p>
                 <span class="price">£5.00 (Standard Jar)</span>
             </div>
         </div>
 
         <div class="product-card">
-            <img src="https://images.pexels.com/photos/1359302/pexels-photo-1359302.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Soft Wildflower Honey Jar">
+            <img src="https://images.unsplash.com/photo-1471943311424-646960669fbc?auto=format&fit=crop&q=80&w=800" alt="Soft Wildflower Honey Jar">
             <div class="product-info">
                 <h3>Soft Wildflower Honey</h3>
                 <p>
-                    A complex, multi-floral blend that captures the diversity of the summer landscape. With a rich amber hue and a bold, aromatic profile, this honey offers deep notes of bramble and woodland blossoms. It remains soft and pourable for longer, making it an excellent choice for drizzling.
+                    A complex, multi-floral blend that captures the diversity of the summer landscape. With a rich amber hue and a bold, aromatic profile, this honey offers deep notes of bramble and woodland blossoms.
                 </p>
                 <span class="price">£10.00 (Larger Jar)</span>
             </div>
