--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
         nav a.nav-button:hover { background-color: #5d3600; color: #fff; transform: translateY(-2px); }
 
-        /* ---------- HERO SECTION ---------- */
+        /* ---------- HERO SECTION (UPDATED WITH PIXABAY) ---------- */
         .hero {
             min-height: 85vh;
             display: flex;
@@ -49,10 +49,10 @@
             align-items: center;
             text-align: center;
             padding: 0 2rem;
-            /* IMAGE MATCHING YOUR PREVIEW: Honeycombs with dripping honey */
+            /* Updated to Pixabay Honeycomb Image */
             background-image: 
-                linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
-                url("https://images.unsplash.com/photo-1558642452-9d2a7deb7f62?auto=format&fit=crop&q=80&w=1920");
+                linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
+                url("https://cdn.pixabay.com/photo/2016/11/29/07/20/honey-1868067_1280.jpg");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -142,50 +142,8 @@
 <section class="about" id="about">
     <h2>Our Heritage & Craft</h2>
     <p>
-        Clyde & Conrad Honey Co. began as a passion project fueled by a deep respect for the remarkable honeybee. Nestled in the rolling green landscapes of North Oxfordshire, our hives sit amidst the ancient hedgerows and wildflower meadows of Adderbury. We don't just "keep" bees; we steward them, ensuring they have a diverse and healthy environment to thrive in year-round.
+        Clyde & Conrad Honey Co. began as a passion project fueled by a deep respect for the remarkable honeybee. Nestled in the rolling green landscapes of North Oxfordshire, our hives sit amidst the ancient hedgerows and wildflower meadows of Adderbury.
     </p>
-    <p>
-        Unlike commercial honey producers, we embrace a "slow honey" movement. We follow the rhythm of the seasons, allowing our bees to forage naturally on the local nectar of hawthorn, chestnut, and summer wildflowers. This connection to the land results in a harvest that changes subtly in flavor and color with every passing year—a true vintage of the Adderbury countryside.
-    </p>
-</section>
-
-<section class="why-natural" id="why-natural">
-    <h2>The Power of Raw Honey</h2>
-    <p>
-        Most supermarket honey is ultra-filtered and pasteurized at high temperatures. This process kills the live enzymes, destroys the delicate aromatic compounds, and removes the beneficial local pollen that makes honey a true superfood.
-    </p>
-    <p>
-        At Clyde & Conrad, we believe that nature got the recipe right the first time. Our honey is <strong>raw</strong>—meaning it has never been heated above the natural temperature of the beehive. This preserves the incredible complexity of its flavor profile and keeps its health-boosting properties intact. 
-    </p>
-</section>
-
-<section class="products" id="products">
-    <h2>From the Hive to Your Table</h2>
-    <p>Each batch of our honey is hand-jarred and labeled in small quantities to ensure the highest quality.</p>
-    
-    <div class="product-grid">
-        <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1555035386-35366c89122c?auto=format&fit=crop&q=80&w=800" alt="Crystalised Clover Honey Jar">
-            <div class="product-info">
-                <h3>Crystalised Clover Honey</h3>
-                <p>
-                    A beautiful, pale honey harvested during the peak of the spring bloom. This variety is known for its delicate, creamy texture and subtle hints of vanilla. Because it is raw, it develops a fine, spreadable crystal structure perfect for toast.
-                </p>
-                <span class="price">£5.00 (Standard Jar)</span>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1471943311424-646960669fbc?auto=format&fit=crop&q=80&w=800" alt="Soft Wildflower Honey Jar">
-            <div class="product-info">
-                <h3>Soft Wildflower Honey</h3>
-                <p>
-                    A complex, multi-floral blend that captures the diversity of the summer landscape. With a rich amber hue and a bold, aromatic profile, this honey offers deep notes of bramble and woodland blossoms.
-                </p>
-                <span class="price">£10.00 (Larger Jar)</span>
-            </div>
-        </div>
-    </div>
 </section>
 
 <footer id="contact">
